
syntax = "proto3";
// 更新用户字段

package simple_bank;

option go_package = "simple_bank/pb";

import "user.proto";
import "google/protobuf/timestamp.proto";

message UpdateUserRequest {
	string username = 1;
	optional string full_name = 2;
	optional string email = 3;
	optional string password = 4;
	optional google.protobuf.Timestamp password_changed_at = 5;
}

message UpdateUserResponse {
	User user = 1;
}
